--- a/Rust/cats_and_mice/Cargo.toml
+++ b/Rust/cats_and_mice/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serenity = "0.9.0-rc.1"
+
+[dependencies.serenity]
+default-features = true
